# TourFirm-software

./: CMakeLists.txt  CourseWork_ru_RU.ts  LICENSE  README.md  booking.cpp  booking.h  booking.ui  comboboxitemdelegate.cpp  comboboxitemdelegate.h  dateeditdelegate.cpp  dateeditdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  regular.cpp  regular.h  regular.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  settings.cpp  settings.h  settings.ui  tours.cpp  tours.h  tours.ui
